--- a/JAVA GUI/Lab01/src/kalkulator.form
+++ b/JAVA GUI/Lab01/src/kalkulator.form
@@ -3,15 +3,15 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="541" height="500"/>
+      <xy x="20" y="20" width="570" height="445"/>
     </constraints>
     <properties>
-      <minimumSize width="500" height="500"/>
-      <preferredSize width="700" height="700"/>
+      <minimumSize width="550" height="350"/>
+      <preferredSize width="550" height="350"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2d218" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="2d218" binding="top" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,10 +32,13 @@
             <border type="none"/>
             <children/>
           </grid>
-          <grid id="209b0" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="209b0" binding="values" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="0">
             <margin top="5" left="5" bottom="5" right="5"/>
             <constraints border-constraint="Center"/>
-            <properties/>
+            <properties>
+              <minimumSize width="285" height="10"/>
+              <preferredSize width="285" height="30"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="be95" class="javax.swing.JLabel">
@@ -56,11 +59,13 @@
               </component>
               <component id="d5390" class="javax.swing.JTextField" binding="textField1" default-binding="true">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="4" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <margin top="4" left="12" bottom="4" right="12"/>
+                </properties>
               </component>
               <component id="e42e7" class="javax.swing.JTextField" binding="textField2" default-binding="true">
                 <constraints>
@@ -74,67 +79,10 @@
           </grid>
         </children>
       </grid>
-      <grid id="3fc0e" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="5c81d" binding="result" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
+        <margin top="10" left="5" bottom="10" right="5"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <grid id="c387b" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
-            <constraints border-constraint="Center"/>
-            <properties>
-              <minimumSize width="517" height="0"/>
-              <preferredSize width="517" height="5"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <component id="6a3eb" class="javax.swing.JButton" binding="dodawanie">
-                <constraints/>
-                <properties>
-                  <foreground color="-16777216"/>
-                  <maximumSize width="123" height="30"/>
-                  <minimumSize width="123" height="30"/>
-                  <preferredSize width="123" height="30"/>
-                  <text value="Dodawanie"/>
-                </properties>
-              </component>
-              <component id="bc803" class="javax.swing.JButton" binding="odejmowanie">
-                <constraints/>
-                <properties>
-                  <foreground color="-16777216"/>
-                  <preferredSize width="123" height="30"/>
-                  <text value="Odejmowanie"/>
-                </properties>
-              </component>
-              <component id="1c81e" class="javax.swing.JButton" binding="mnozenie">
-                <constraints/>
-                <properties>
-                  <foreground color="-16777216"/>
-                  <maximumSize width="123" height="30"/>
-                  <minimumSize width="123" height="30"/>
-                  <preferredSize width="123" height="30"/>
-                  <text value="Mnożenie"/>
-                </properties>
-              </component>
-              <component id="34ef8" class="javax.swing.JButton" binding="dzielenie">
-                <constraints/>
-                <properties>
-                  <foreground color="-16777216"/>
-                  <maximumSize width="123" height="30"/>
-                  <minimumSize width="123" height="30"/>
-                  <preferredSize width="123" height="30"/>
-                  <text value="Dzielenie"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-        </children>
-      </grid>
-      <grid id="5c81d" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="16" style="1"/>
@@ -143,19 +91,65 @@
         <children>
           <component id="c2a0f" class="javax.swing.JLabel">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <focusable value="false"/>
+              <font size="16"/>
               <text value="Wynik"/>
             </properties>
           </component>
           <component id="ea9d4" class="javax.swing.JTextField" binding="textField3" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+                <preferred-size width="150" height="40"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="false"/>
+              <focusable value="false"/>
+              <margin top="4" left="12" bottom="4" right="12"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="551a0" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="2d35" class="javax.swing.JButton" binding="dodawanieButton">
+            <constraints/>
+            <properties>
+              <preferredSize width="123" height="30"/>
+              <text value="Dodawanie"/>
+            </properties>
+          </component>
+          <component id="ea409" class="javax.swing.JButton" binding="odejmowanieButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <preferredSize width="123" height="30"/>
+              <text value="Odejmowanie"/>
+            </properties>
+          </component>
+          <component id="2e59f" class="javax.swing.JButton" binding="mnozenieButton">
+            <constraints/>
+            <properties>
+              <preferredSize width="123" height="30"/>
+              <text value="Mnożenie"/>
+            </properties>
+          </component>
+          <component id="1ee38" class="javax.swing.JButton" binding="dzielenieButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <preferredSize width="123" height="30"/>
+              <requestFocusEnabled value="true"/>
+              <rolloverEnabled value="true"/>
+              <text value="dzielenie"/>
+            </properties>
           </component>
         </children>
       </grid>
