--- a/JAVA GUI/Lab01/src/Temperatura/konwersjaTemperatury.form
+++ b/JAVA GUI/Lab01/src/Temperatura/konwersjaTemperatury.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="480" height="250"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="29a04" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -37,35 +39,42 @@
                 <children>
                   <component id="880b9" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <font size="14"/>
                       <text value="W Celsjuszach"/>
                     </properties>
                   </component>
                   <component id="db470" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="W Farenheitach"/>
+                      <font size="14"/>
+                      <text value="W Fahrenheitach"/>
                     </properties>
                   </component>
-                  <component id="9e3c9" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                  <component id="9e3c9" class="javax.swing.JTextField" binding="JCelsjusz">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <font size="14"/>
+                    </properties>
                   </component>
-                  <component id="cd2bc" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+                  <component id="cd2bc" class="javax.swing.JTextField" binding="JFahrenheit">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <editable value="false"/>
+                      <font size="14"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
@@ -96,7 +105,7 @@
         </constraints>
         <properties>
           <font size="20" style="1"/>
-          <text value="Konwersja temperatury Celsjusza na Farenheit"/>
+          <text value="Konwersja temperatury Celsjusza na Fahrenheit"/>
         </properties>
       </component>
     </children>
